--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="one">
             <h1 class="one">
                 Hi
-                <span id="name">Irene</span>
+                <span id="name">Hazemy</span>
             </h1>
             <p class="two" id="greetingText">I really like your name btw!</p>
         </div>
@@ -39,7 +39,13 @@
         <div class="four">
             <div class="text-box">
                 <p class="hbd-chatbox">
-                Happy birthday to youu!! Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur quisquam amet ipsam vitae, voluptatum architecto aliquid id quo error tempora quos aperiam magni necessitatibus quas ut, possimus nesciunt nam ad.
+                 Happy Birthday, my Beloved person! 💖
+
+Today is all about celebrating the amazing, beautiful, and incredible person you are. I'm so grateful to have you in my life, and every moment with you is a gift I cherish. Your smile lights up my world, and your love fills my heart in ways I never imagined possible.
+
+I hope this day brings you as much joy as you bring me. I can’t wait to create even more wonderful memories with you. Here's to another year of laughter, love, and all the happiness in the world. You deserve nothing less.
+
+Enjoy every moment, my pwincess. I’m so lucky to have you.
                 </p>
                 <p class="fake-btn">Send</p>
             </div>
@@ -55,7 +61,7 @@
             </p>
             <p class="idea-4">Because,</p>
             <p class="idea-5">
-                You are Special
+                You are Special 💖
                 <span>:)</span>
             </p>
             <p class="idea-6">
@@ -69,7 +75,7 @@
             <img src="img/hat.svg" alt="hat" class="hat" />
             <div class="wish">
                 <h3 class="wish-hbd">Happy Birthday!</h3>
-                <h5 id="wishText">May the js.prototypes always be with you! ;)</h5>
+                <h5 id="wishText">May the beauty always be with you! ;)</h5>
             </div>
         </div>
 
